2009-01-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/aio.h, posix/src/aio_suspend.c: Make aio_suspend()
	POSIX-compliant.

2008-12-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libblock/src/bdbuf.c: Fix typo having crept in during
	  boolean->bool transition.

2008-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/nfsclient/Makefile.am: Remove RTEMS_RELLDFLAGS.
	* aclocal/prog-cc.m4: Add RTEMS_RELLDFLAGS hack.
	* libfs/src/nfsclient/src/dirutils.c: #include <limits.h>.

2008-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/include/rtems/rtems/clock.h: #include <sys/time.h>
	* librpc/include/rpc/rpcent.h: #include <rpc/types.h>.
	* librpc/include/rpc/xdr.h: #include <rtems/bsd/sys/cdefs.h>.

2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1348/cpukit
	* rtems/src/ratemonperiod.c: Properly handle period statistics after
	cpu usage information is reset while a period is running.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1347/cpukit
	* rtems/include/rtems/rtems/timer.h, rtems/src/rtemstimer.c,
	rtems/src/timerreset.c, rtems/src/timerserver.c,
	rtems/src/timerserverfireafter.c, rtems/src/timerserverfirewhen.c,
	score/Makefile.am, score/include/rtems/score/watchdog.h: Rework Timer
	Server to ensure that the context allows for blocking, allocating
	memory, and acquiring semaphores and mutexes.
	* score/src/watchdogadjusttochain.c: New file.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1346/cpukit
	* rtems/include/rtems/rtems/ratemon.h: Sense of rate monotonic
	statistics nanoseconds or ticks granularity conditional is backwards.

2008-12-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/src/ttyname.c: Correct prototype of ttyname_r() to use
	size_t for third parameter.

2008-12-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libmisc/shell/main_cp.c, libmisc/shell/main_ls.c,
	libmisc/shell/main_mv.c, libmisc/shell/main_netstats.c,